# Task_Module

./: .gitignore  CMakeLists.txt  DockerFile.txt  README.md  package.xml
action_controller/: CMakeLists.txt  README.txt  mainpage.dox  package.xml
action_controller/action/: MultiDofFollowJointTrajectory.action
action_controller/msg/: MultiDofFollowJointTrajectoryAction.msg  MultiDofFollowJointTrajectoryActionFeedback.msg  MultiDofFollowJointTrajectoryActionGoal.msg  MultiDofFollowJointTrajectoryActionResult.msg  MultiDofFollowJointTrajectoryFeedback.msg  MultiDofFollowJointTrajectoryGoal.msg  MultiDofFollowJointTrajectoryResult.msg
action_controller/msg_gen/cpp/include/action_controller/: MultiDofFollowJointTrajectoryAction.h  MultiDofFollowJointTrajectoryActionFeedback.h  MultiDofFollowJointTrajectoryActionGoal.h  MultiDofFollowJointTrajectoryActionResult.h  MultiDofFollowJointTrajectoryFeedback.h  MultiDofFollowJointTrajectoryGoal.h  MultiDofFollowJointTrajectoryResult.h
action_controller/src/: actionController.cpp  actionController.py  duke_control.py
config/: full_list_zed_topics.txt  tasks_config.yaml  topics.yaml
docker/: Dockerfile  README.md  docker-compose.yml
docker/architecture/: docker-compose.yml  simulator_node.dockerfile  task_module.dockerfile
docker/embedded/: docker-compose.yml  rosserial.dockerfile
docker/files/: camera_node.dockerfile  docker-compose.yml  embedded.dockerfile  simulator_node.dockerfile
docker/production/: docker-compose.yml  production_architecture.dockerfile  production_embedded.dockerfile  production_vision.dockerfile
docker/vision/: 0001-Use-yaml-cpp-cmake-package.patch  Dockerfile  dependencies.sh  opencv.sh  ros-environment.sh  tensorrt_inference.sh
docker/vision-docker/: 0001-WIP-Add-missing-package-dependencies.patch  Dockerfile  Dockerfile.orig
launch/: README.md  move_group.launch  moveit.rviz  moveit_controller_manager.launch  ompl_planning_pipeline.launch  planning_context.launch  tasks_execute.launch  trajectory_execution.launch
moveit_simple_controller_manager/: CMakeLists.txt  README.txt  moveit_simple_controller_manager_plugin_description.xml  package.xml
moveit_simple_controller_manager/include/moveit_simple_controller_manager/: action_based_controller_handle.h  follow_joint_trajectory_controller_handle.h  gripper_controller_handle.h  multi_dof_follow_joint_trajectory_handle.h
moveit_simple_controller_manager/src/: moveit_simple_controller_manager.cpp
nav_sensors/: CMakeLists.txt  package.xml
nav_sensors/config/: dvl.yaml
nav_sensors/launch/: hydrus_dvl.launch
nav_sensors/msg/: DVL_Beams.msg  DVL_Data.msg  DVL_Info.msg  DVL_MSG.msg  DVL_Power.msg
nav_sensors/scripts/: dvl_node.py  dvl_sub.py  ypr_vn100.py
nav_sensors/scripts/examples/: data_example.py  soft_trigger_example.py
nav_sensors/src/VN100/vnproglib/c/examples/ez_async_data/projects/vs2019/: ez_async_data.sln  ez_async_data.vcxproj
nav_sensors/src/VN100/vnproglib/c/examples/firmware_update/: CMakeLists.txt  Makefile  main.c
nav_sensors/src/VN100/vnproglib/c/examples/firmware_update/Projects/vs2019/: Firmware Update Example.sln  (+1 more)
nav_sensors/src/VN100/vnproglib/c/help/: annotated.html  bool_8h_source.html  classes.html  common_8h_source.html  compiler_8h_source.html  compositedata_8h_source.html  const_8h_source.html  conv_8h_source.html  criticalsection_8h.html  criticalsection_8h_source.html  dir_027780aa32961d07c4d51557f73a7d30.html  dir_31a68fee5b0aade5575fcd9899552a15.html  dir_8bde4b85f1f8cd0faa87b91375e717e4.html  dir_b8f3676ce45a2d9945f359024fabdbc0.html  dir_c8e7966a7aa62365068a660868ad1d75.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f40822c92baf324ecf3ea224d9a1e0b5.html  enum_8h_source.html  error_8h_source.html  error__detection_8h_source.html  event_8h.html  event_8h_source.html  examples.html  export_8h_source.html  ez_async_data_2main_8c-example.html  ezasyncdata_8h_source.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  (+134 more)
nav_sensors/src/VN100/vnproglib/c/help/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  (+28 more)
nav_sensors/src/VN100/vnproglib/c/include/vn/: enum.h  sensors.h  util.h
nav_sensors/src/VN100/vnproglib/c/include/vn/protocol/: common.h  upack.h  upackf.h
nav_sensors/src/VN100/vnproglib/c/projects/vs2017/: libvnc.vcxproj  libvnc.vcxproj.filters
nav_sensors/src/VN100/vnproglib/c/src/vn/: error.c  sensors.c
nav_sensors/src/VN100/vnproglib/c/src/vn/protocol/: upack.c  upackf.c
nav_sensors/src/VN100/vnproglib/python/help/: examples.html  ezasyncdata.html  genindex.html  getting_started.html  index.html  known_issues.html  py-modindex.html  registers.html  search.html  version_history.html  vnpy_conv.html  vnpyapi.html
task_module/: CMakeLists.txt  package.xml
task_module/launch/: control.launch  example.launch  gazebo.launch  rexrov.launch  tasks.launch
tasks/: CMakeLists.txt  bouy_task.py  data.py  example.py  gate_task.py  movement.py  package.xml  path_task.py  utils.py
tasks/src/: bouy_task.py  data.py  edge_cases.py  example.py  gate_task.py  movement.py  path_task.py  robot_math.py  utils.py
tasks/test/: camera.test  camera_test.py  movement.test  movement_test.py  test_camera.py  test_camera.test
tasks/test/test_data/: test_topics.yml
test/: gate_task_test.py  objects_dummy.py  test_camera.py
uuv_control_msgs/: CMakeLists.txt  package.xml
uuv_control_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg  WaypointSet.msg
(+6 files in other folders)
