<?xml version="1.0"?>
<package format="2">
    <name>Task_Module</name>
    <version>0.1.0</version>
    <description>A package that includes and utilizes the tasks package for specific functionalities.</description>

    <maintainer email="your-email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <!-- URL for the repository or website of the Task_Module package -->
    <url type="website">http://example.com/Task_Module</url>
    <url type="repository">http://github.com/your-repo/Task_Module</url>
    <url type="bugtracker">http://github.com/your-repo/Task_Module/issues</url>

    <!-- Common build tool dependency -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies for the Task_Module -->
    <!-- Add dependencies as needed -->
    <!-- <depend>some_other_dependency</depend> -->

    <!-- Execution-time dependency on the tasks package -->
    <exec_depend>tasks</exec_depend>


    <!-- TO ADD LATER -->
    <!-- <exec_depend>zed_wrapper</exec_depend> -->
    <!-- <exec_depend>nav_sensors</exec_depend> -->

</package>
