<?xml version="1.0"?>
<package format="2">
    <name>tasks</name>
    <version>0.1.0</version>
    <description>This is a combined package that includes dependencies for zed_nodelets, smach_tutorials, and nav_sensors.</description>

    <maintainer email="your-email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <!-- URLs from zed_nodelets and smach_tutorials -->
    <url type="website">http://stereolabs.com/</url>
    <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
    <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>
    <url>http://ros.org/wiki/smach_tutorials</url>

    <!-- Common build tool dependency -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Combined dependencies -->
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>nodelet</depend>
    <depend>diagnostic_updater</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>    
    <depend>zed_interfaces</depend>
    <depend>message_runtime</depend>
    <depend>rospy</depend>
    <depend>smach</depend>
    <depend>smach_ros</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>message_generation</depend>
    <depend>rosbag</depend>
    <depend>std_msgs</depend>
    <depend>topic_tools</depend>

    <!-- Adding uuv_control_msgs as an exec dependency -->
    <exec_depend>uuv_control_msgs</exec_depend>
    <build_depend>uuv_control_msgs</build_depend>

    <!-- Adding the nav_sensor dependencies from the Hydrus repository -->
    <depend>nav_sensors</depend>

    <!-- Export tag from zed_nodelets -->
    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
